force-app/main/default/objects/Zendesk__ZendeskSession__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store sort order and filters</description>
    <fields>
        <fullName>Zendesk__AccountNameOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Name Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__PriorityFilter__c</fullName>
        <description>Be careful when changing the label as it may affect existing merge templates.</description>
        <label>Account Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__SortDesc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sort Descending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__SortField__c</fullName>
        <label>Sort by</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__StatusFilter__c</fullName>
        <label>Status Filter</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__TypeFilter__c</fullName>
        <label>Type Filter</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__url__c</fullName>
        <label>Zendesk URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__username__c</fullName>
        <label>Login</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Session Deprecated</label>
</CustomObject>